lipu-nasin-pona: finish adding source text and prepping

--- a/lipu-nasin-pona/41.md
+++ b/lipu-nasin-pona/41.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 41 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 41 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
