--- a/lipu-nasin-pona/50.md
+++ b/lipu-nasin-pona/50.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 50 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 50 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,24 +10,22 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-出生、入死。生之徒十有三、死之徒十有三。人之生、动之死地亦十有三。夫何故。以其生生之厚。盖闻、善摄摄生者、陆行不遇 兕 虎、入军不被甲兵。 兕 无所投其角、虎无所措其爪、兵无所容其刃。夫何 故。以其无死地。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Coming into life and entering death,
-|  |  | The followers of life are three in ten.
-|  |  | The followers of death are three in ten.
-|  |  | Those whose life activity is their death ground are three in ten.
-|  |  | Why is this?
-|  |  | Because they live life grasping for its rich taste.
-|  |  | Now I have heard that those who are expert in handling life
-|  |  | Can travel the land without meeting tigers and rhinos,
-|  |  | Can enter battle without being wounded.
-|  |  | The rhino has no place to plant its horn,
-|  |  | The tiger has no place to place its claws,
-|  |  | Weapons find no place to receive their sharp edges.
-|  |  | Why?
-|  |  | Because he has no death-ground.
+| 出生入死           |                 | Coming into life and entering death,
+| 生之徒<wbr/>十有三 |                 | The followers of life are three in ten.
+| 死之徒<wbr/>十有三 |                 | The followers of death are three in ten.
+| 人之生<wbr/>动之死地<wbr/>十有三 |   | Those whose life activity is their death ground are three in ten.
+| 夫何故             | ni li tan seme? | Why is this?
+| 以其生<wbr/>生之厚 |                 | Because they live life grasping for its rich taste.
+| 盖闻善摄生者       |                 | Now I have heard that those who are expert in handling life
+| 陆行不遇兕虎       |                 | Can travel the land without meeting tigers and rhinos,
+| 入军不被甲兵       |                 | Can enter battle without being wounded.
+| 兕无所投其角       |                 | The rhino has no place to plant its horn,
+| 虎无所措其爪       |                 | The tiger has no place to place its claws,
+| 兵无所容其刃       |                 | Weapons find no place to receive their sharp edges.
+| 夫何故             |                 | Why?
+| 以其无死地         |                 | Because he has no death-ground.
 
 {% include kipisi-nav.html num=50 %}
 
