--- a/lipu-nasin-pona/51.md
+++ b/lipu-nasin-pona/51.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 51 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 51 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-道生之、德畜之、物形之、势成之。是以万物、莫不尊道而贵德。道之尊、德之贵、夫莫之命而常自然。故道生之、德畜之、长之、育之、亭之、毒之、盖之、覆 之。生而不有、为而不恃、长而不宰。是谓玄德
-
 {:.loseta}
 |:-:|-|-
-|  |  | Way gives birth to it,
-|  |  | Virtue rears it,
-|  |  | Materiality shapes it,
-|  |  | Activity perfects it.
-|  |  | Therefore, there are none of the myriad things who do not venerate the Way or esteem its virtue.
-|  |  | This veneration of the Way and esteeming of its virtue is something they do naturally, without being forced.
-|  |  | Therefore, the Way gives birth.
-|  |  | Its virtue rears, develops, raises, adjusts and disciplines,
-|  |  | Nourishes, covers and protects,
-|  |  | Produces but does not possess,
-|  |  | Acts without expectation,
-|  |  | Leads without forcing.
-|  |  | This is called “Mysterious Virtue.”
+| 道生之                                 |  | Way gives birth to it,
+| 德畜之                                 |  | Virtue rears it,
+| 物形之                                 |  | Materiality shapes it,
+| 势成之                                 |  | Activity perfects it.
+| 是以<wbr/>万物莫不尊道<wbr/>而贵德     |  | Therefore, there are none of the myriad things who do not venerate the Way or esteem its virtue.
+| 道之尊<wbr/>德之贵<wbr/>夫莫之命常自然 |  | This veneration of the Way and esteeming of its virtue is something they do naturally, without being forced.
+| 故道生之                               |  | Therefore, the Way gives birth.
+| 德<wbr/>畜之<wbr/>长之<wbr/>育之<wbr/>亭之 |  | Its virtue rears, develops, raises, adjusts and disciplines,
+| 毒之<wbr/>养之<wbr/>覆之               |  | Nourishes, covers and protects,
+| 生而不有                               |  | Produces but does not possess,
+| 为而不恃                               |  | Acts without expectation,
+| 长而不宰                               |  | Leads without forcing.
+| 是谓玄德                               |  | This is called “Mysterious Virtue.”
 
 {% include kipisi-nav.html num=51 %}
 
