--- a/lipu-nasin-pona/52.md
+++ b/lipu-nasin-pona/52.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 52 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 52 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,25 +10,23 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天下有始、以为天下母。旣得其母、以知其子、旣知其子、復守其母、没身不殆。塞其兑、闭其门、终身不勤。开其兑、济其事、终身不救。见小曰明、守柔日强。 用其光、復归其明、无遗身殃。是为习常。
-
 {:.loseta}
 |:-:|-|-
-|  |  | All things have a beginning, which we can regard as their Mother.
-|  |  | Knowing the mother, we can know its children.
-|  |  | Knowing the children, yet still cleaving to the mother
-|  |  | You can die without pain.
-|  |  | Stop up the holes
-|  |  | Shut the doors,
-|  |  | You can finish your life without anxiety.
-|  |  | Open the doors,
-|  |  | Increase your involvements,
-|  |  | In the end you can't be helped.
-|  |  | Seeing the subtle is called illumination.
-|  |  | Keeping flexible is called strength.
-|  |  | Use the illumination, but return to the light.
-|  |  | Don't bring harm to yourself.
-|  |  | This is called “practicing the eternal.”
+| 天下有始<wbr/>以为天下母 |  | All things have a beginning, which we can regard as their Mother.
+| 既知其母<wbr/>以复其子   |  | Knowing the mother, we can know its children.
+| 既知其子<wbr/>复守其母   |  | Knowing the children, yet still cleaving to the mother
+| 没其不殆                 |  | You can die without pain.
+| 塞其兑                   |  | Stop up the holes
+| 闭其门                   |  | Shut the doors,
+| 终身不勤                 |  | You can finish your life without anxiety.
+| 开其兑                   |  | Open the doors,
+| 济其事                   |  | Increase your involvements,
+| 终身不救                 |  | In the end you can't be helped.
+| 见小曰明                 |  | Seeing the subtle is called illumination.
+| 守柔曰强                 |  | Keeping flexible is called strength.
+| 用其光<wbr/>复归其明     |  | Use the illumination, but return to the light.
+| 无遗身殃                 |  | Don't bring harm to yourself.
+| 是为习常                 |  | This is called “practicing the eternal.”
 
 {% include kipisi-nav.html num=52 %}
 
