--- a/lipu-nasin-pona/53.md
+++ b/lipu-nasin-pona/53.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 53 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 53 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-使我介然有知、行於大道、唯施是畏。大道甚夷、而民好径。朝甚除、田甚芜、仓甚虚。服文綵、带利剑、厌飫食、財货有余。是谓盗夸。非道也哉。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If I had just a little bit of wisdom
-|  |  | I should walk the Great Path and fear only straying from it.
-|  |  | Though the Way is quite broad
-|  |  | People love shortcuts.
-|  |  | The court is immaculate,
-|  |  | While the fields are overgrown with weeds,
-|  |  | And the granaries are empty.
-|  |  | They wear silk finery,
-|  |  | Carry sharp swords,
-|  |  | Sate themselves on food and drink
-|  |  | Having wealth in excess.
-|  |  | They are called thieving braggarts.
-|  |  | This is definitely not the Way.
+| 使我介然有知 |  | If I had just a little bit of wisdom
+| 行于大道<wbr/>唯施是畏 |  | I should walk the Great Path and fear only straying from it.
+| 大道甚夷     |  | Though the Way is quite broad
+| 而民好径     |  | People love shortcuts.
+| 朝甚除       |  | The court is immaculate,
+| 田甚芜       |  | While the fields are overgrown with weeds,
+| 仓甚虚       |  | And the granaries are empty.
+| 服文彩       |  | They wear silk finery,
+| 带利剑       |  | Carry sharp swords,
+| 厌饮食       |  | Sate themselves on food and drink
+| 财货有馀     |  | Having wealth in excess.
+| 是谓盗夸     |  | They are called thieving braggarts.
+| 非道也哉     |  | This is definitely not the Way.
 
 {% include kipisi-nav.html num=53 %}
 
