--- a/lipu-nasin-pona/54.md
+++ b/lipu-nasin-pona/54.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 54 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 54 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,25 +10,23 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-善建者不拔、善抱者不脱。子孙以祭祀不輟。修之於身、其德乃眞。修之於家、其德乃余。修之於鄕、其德乃长。修之於国、其德乃丰。修之於天下、其德乃普。故 以身观身、以家观家、以鄕观鄕、以国观国、以天下观天下。吾何以知天下然哉。以此。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The well-established cannot be uprooted.
-|  |  | The well-grasped does not slip away.
-|  |  | Generation after generation carries out the ancestor worship without break.
-|  |  | Cultivate it in yourself and virtue will be real.
-|  |  | Cultivate it in the family and virtue will overflow.
-|  |  | Cultivate it in the town and virtue will be great.
-|  |  | Cultivate it in the country and virtue will abundant.
-|  |  | Cultivate it in the world and virtue will be everywhere.
-|  |  | Therefore, take yourself and observe yourself.
-|  |  | Take the family and observe the family.
-|  |  | Take the town and observe the town.
-|  |  | Take the country and observe the country.
-|  |  | Take the world and observe the world.
-|  |  | How do I know the world as it is?
-|  |  | By this.
+| 善建不拔         |         | The well-established cannot be uprooted.
+| 善抱者不脱       |         | The well-grasped does not slip away.
+| 子孙以祭祀不辍   |         | Generation after generation carries out the ancestor worship without break.
+| 修之于身<wbr/>其德乃真   |         | Cultivate it in yourself and virtue will be real.
+| 修之于家<wbr/>其德乃馀   |         | Cultivate it in the family and virtue will overflow.
+| 修之于乡<wbr/>其德乃长   |         | Cultivate it in the town and virtue will be great.
+| 修之于国<wbr/>其德乃丰   |         | Cultivate it in the country and virtue will abundant.
+| 修之于天下<wbr/>其德乃普 |         | Cultivate it in the world and virtue will be everywhere.
+| 故以身观身       |         | Therefore, take yourself and observe yourself.
+| 以家观家         |         | Take the family and observe the family.
+| 以乡观乡         |         | Take the town and observe the town.
+| 以国观国         |         | Take the country and observe the country.
+| 以天下观天下     |         | Take the world and observe the world.
+| 吾何以知天下然哉 |         | How do I know the world as it is?
+| 以此             | tan ni. | By this.
 
 {% include kipisi-nav.html num=54 %}
 
