--- a/lipu-nasin-pona/55.md
+++ b/lipu-nasin-pona/55.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 55 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 55 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,30 +10,28 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-含德之厚、比於赤子。蜂 蠆虺 蛇不螫、猛兽不据、攫鸟不持。骨弱筋柔而握固。 未知牝牡之合而全作。精之至也。终日號而不嗄。和之至也。知和曰常、知常曰明。益生曰祥、心使气曰强。物壮则老、谓之不道。不道早已。
-
 {:.loseta}
 |:-:|-|-
-|  |  | One who remains rich in virtuous power
-|  |  | Is like a newborn baby.
-|  |  | Bees, scorpions and venomous snakes do not bite it,
-|  |  | The wild beasts do not attack it,
-|  |  | Birds of prey do not sink their claws into it.
-|  |  | Though its bones are weak
-|  |  | And muscles soft,
-|  |  | Its grip is strong.
-|  |  | Without knowing of the blending of male and female
-|  |  | S/he is a perfect production,
-|  |  | The ultimate in vitality.
-|  |  | S/he cries all day without getting hoarse.
-|  |  | S/he is the ultimate in harmony.
-|  |  | Understanding harmony is called the Constant.
-|  |  | Knowing the Constant is called illumination.
-|  |  | Nourishing life is called blessing.
-|  |  | Having control of your breath is called strength.
-|  |  | After things blossom they decay, and
-|  |  | This is called the non-Way.
-|  |  | The non-Way expires quickly.
+| 含德之厚     |                               | One who remains rich in virtuous power
+| 比于赤子     |                               | Is like a newborn baby.
+| 蜂虿虺蛇不螫 |                               | Bees, scorpions and venomous snakes do not bite it,
+| 猛兽不据     |                               | The wild beasts do not attack it,
+| 攫鸟不搏     |                               | Birds of prey do not sink their claws into it.
+| 骨弱         |                               | Though its [the infant's] bones are weak
+| 筋柔         |                               | And muscles soft,
+| 而握固       |                               | Its grip is strong.
+| 未知牝牡之   | ona li mije li meli li tonsi la, jan li sona ala. | Without knowing of the blending of male and female
+| 合而全作     | taso ona li ken pali ale.     | S/he is a perfect production,
+| 精之至也     |                               | The ultimate in vitality.
+| 终日号而不嗄 |                               | S/he cries all day without getting hoarse.
+| 和之至也     |                               | S/he is the ultimate in harmony.
+| 知和曰常     |                               | Understanding harmony is called the Constant.
+| 知常曰明     |                               | Knowing the Constant is called illumination.
+| 益生曰祥     |                               | Nourishing life is called blessing.
+| 心使气曰强   |                               | Having control of your breath is called strength.
+| 物壮则老     |                               | After things blossom they decay, and
+| 谓之不道     |                               | This is called the non-Way.
+| 不道早已     |                               | The non-Way expires quickly.
 
 {% include kipisi-nav.html num=55 %}
 
