--- a/lipu-nasin-pona/56.md
+++ b/lipu-nasin-pona/56.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 56 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 56 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,20 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-知者不言、言者不知。塞其兑 闭其门 挫其锐 解其纷 和其光 同其尘。是谓玄同。故不可得而亲、不可得而疏。不可得而利、不可得而害。不可得而贵、不可得而贱。故为天下贵。
-
 {:.loseta}
 |:-:|-|-
-|  |  | One who knows does not speak.
-|  |  | One who speaks does not know.
-|  |  | Close your holes, shut your doors,
-|  |  | Soften your sharpness, loosen your knots.
-|  |  | Soften your glare and merge with the everyday.
-|  |  | This is called mysteriously attaining oneness.
-|  |  | Though you cannot possess it, you are intimate with it
-|  |  | And at the same time, distant.
-|  |  | Though you cannot possess it, you are benefitted by it,
-|  |  | And harmed by it.
-|  |  | You cannot possess it, but are esteemed through it
-|  |  | And humbled by it.
-|  |  | Therefore the world values you.
+| 知者不言           |  | One who knows does not speak.
+| 言者不知           |  | One who speaks does not know.
+| 塞其兑<wbr/>闭其门 |  | Close your holes, shut your doors,
+| 挫其锐<wbr/>解其分 |  | Soften your sharpness, loosen your knots.
+| 和其光<wbr/>同其尘 |  | Soften your glare and merge with the everyday.
+| 是谓玄同           |  | This is called mysteriously attaining oneness.
+| 不可得而疏         |  | Though you cannot possess it, you are intimate with it<br/> And at the same time, distant.
+| 不可得而利         |  | Though you cannot possess it, you are benefitted by it,
+| 不可得而害         |  | And [though you cannot possess it, you are] harmed by it.
+| 不可得而贵         |  | You cannot possess it, but are esteemed through it
+| 不可得而贱         |  | And [though you cannot possess it, you are] humbled by it.
+| 故为天下贵         |  | Therefore the world values you.
 
 {% include kipisi-nav.html num=56 %}
 
