--- a/lipu-nasin-pona/58.md
+++ b/lipu-nasin-pona/58.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 58 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 58 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,25 +10,23 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-其政闷闷、其民淳淳。其政察察、其民缺缺。祸兮福之所倚、福兮祸之所伏。孰知其极。其无正。正復为奇、善復为妖。人之迷、其日固久。是以圣人方而不割、廉 而不 劌 、直而不肆、光而不耀。
-
 {:.loseta}
 |:-:|-|-
-|  |  | When the government is laid back
-|  |  | The people are relaxed.
-|  |  | When the government is nitpicking
-|  |  | The people have anxiety.
-|  |  | Misfortune depends upon fortune.
-|  |  | Fortune conceals misfortune.
-|  |  | What has a definite delimitation?
-|  |  | Or abnormality?
-|  |  | The normal reverts to strangeness.
-|  |  | Goodness reverts to perversion.
-|  |  | People certainly have been confused for a long time.
-|  |  | Therefore the sage squares things without cutting.
-|  |  | Edges without separating.
-|  |  | Straightens without lining up.
-|  |  | Shines but does not glare.
+| 其政闷闷     |  | When the government is laid back
+| 其民淳淳     |  | The people are relaxed.
+| 其政察察     |  | When the government is nitpicking
+| 其民缺缺     |  | The people have anxiety.
+| 祸兮福之所倚 |  | Misfortune depends upon fortune.
+| 福兮祸之所伏 |  | Fortune conceals misfortune.
+| 孰知其极     |  | What has a definite delimitation?
+| 其无正       |  | Or abnormality?
+| 正复为奇     |  | The normal reverts to strangeness.
+| 善复为妖     |  | Goodness reverts to perversion.
+| 人之迷<wbr/>其日固久 |  | People certainly have been confused for a long time.
+| 是以圣人方而不割     |  | Therefore the sage squares things without cutting.
+| 廉而不刿     |  | Edges without separating.
+| 直而不肆     |  | Straightens without lining up.
+| 光而不耀     |  | Shines but does not glare.
 
 {% include kipisi-nav.html num=58 %}
 
