--- a/lipu-nasin-pona/63.md
+++ b/lipu-nasin-pona/63.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 63 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 63 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,27 +10,25 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-为无为、事无事、味无味。大小多少、报怨以德。图难於其易、为大於其细。天下难事必作於易、天下大事必作於细。是以圣人终不为大、故能成其大。夫轻诺必寡信、多易必多难。是以圣人犹难之。故终无难矣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Do without “doing.”
-|  |  | Get involved without manipulating.
-|  |  | Taste without tasting.
-|  |  | Make the great small,
-|  |  | The many, few.
-|  |  | Respond to anger with virtue.
-|  |  | Deal with difficulties while they are still easy.
-|  |  | Handle the great while it is still small.
-|  |  | The difficult problems in life
-|  |  | Always start off being simple.
-|  |  | Great affairs always start off being small.
-|  |  | Therefore the sage never deals with the great
-|  |  | And is able to actualize his greatness.
-|  |  | Now light words generate little belief,
-|  |  | Much ease turns into much difficulty.
-|  |  | Therefore the sage treats things as though they were difficult,
-|  |  | And hence, never has difficulty.
+| 为无为                 |  | Do without “doing.”
+| 事无事                 |  | Get involved without manipulating.
+| 味无味                 |  | Taste without tasting.
+| 大小                   |  | Make the great small,
+| 多少                   |  | The many, few.
+| 报怨以德               |  | Respond to anger with virtue.
+| 图难于其易             |  | Deal with difficulties while they are still easy.
+| 为大于其细             |  | Handle the great while it is still small.
+| 天下难事               |  | The difficult problems in life
+| 必作于易               |  | Always start off being simple.
+| 天下大事<wbr/>必作于细 |  | Great affairs always start off being small.
+| 是以圣人<wbr/>终不为大 |  | Therefore the sage never deals with the great
+| 故能成其大             |  | And is able to actualize his greatness.
+| 夫轻诺必寡信           |  | Now light words generate little belief,
+| 多易必多难             |  | Much ease turns into much difficulty.
+| 是以圣人<wbr/>犹难之   |  | Therefore the sage treats things as though they were difficult,
+| 故终无难矣             |  | And hence, never has difficulty.
 
 {% include kipisi-nav.html num=63 %}
 
