--- a/lipu-nasin-pona/64.md
+++ b/lipu-nasin-pona/64.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 64 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 64 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,34 +10,32 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-其安易持、其未兆易谋、其脆易 泮 、其微易散。为之於未有、治之於未乱。合抱之木、生於毫末。九层之臺、起於累土。千里之行、始於足下。为者败之、执者失之。是以圣人、无为、故无败。无执、故无失。民之从事、常於几成而败之。愼终如 始、则无败事。是以圣人欲不欲、不贵难得之货。学不学、復众人之所过。以辅万物之自然、而不敢为。
 {:.loseta}
-| Toki Pna | Chinese | English
 |-:|:-:|:-
-|  |  | That which is at rest is easy to grasp.
-|  |  | That which has not yet come about is easy to plan for.
-|  |  | That which is fragile is easily broken.
-|  |  | That which is minute is easily scattered.
-|  |  | Handle things before they arise.
-|  |  | Manage affairs before they are in a mess.
-|  |  | A thick tree grows from a tiny seed.
-|  |  | A tall building arises from a mound of earth.
-|  |  | A journey of a thousand miles starts with one step.
-|  |  | Contriving, you are defeated;
-|  |  | Grasping, you lose.
-|  |  | The sage doesn't contrive, so she isn't beaten.
-|  |  | Not grasping, she doesn't lose.
-|  |  | When people are carrying out their projects
-|  |  | They usually blow it at the end.
-|  |  | If you are as careful at the end
-|  |  | As you were at the beginning,
-|  |  | You won't be disappointed.
-|  |  | Therefore the sage desires non-desire,
-|  |  | Does not value rare goods,
-|  |  | Studies the unlearnable
-|  |  | So that she can correct the mistakes of average people
-|  |  | And aid all things in manifesting their true nature
-|  |  | Without presuming to take the initiative.
+| 其安易持               |  | That which is at rest is easy to grasp.
+| 其未兆易谋             |  | That which has not yet come about is easy to plan for.
+| 其脆易泮               |  | That which is fragile is easily broken.
+| 其微易散               |  | That which is minute is easily scattered.
+| 为之于未有             |  | Handle things before they arise.
+| 治之于未乱             |  | Manage affairs before they are in a mess.
+| 合抱之木<wbr/>生于毫末 |  | A thick tree grows from a tiny seed.
+| 九层之台<wbr/>起于累土 |  | A tall building arises from a mound of earth.
+| 千里之行<wbr/>始于足下 |  | A journey of a thousand miles starts with one step.
+| 为者败之               |  | Contriving, you are defeated;
+| 执者失之               |  | Grasping, you lose.
+| 是以<wbr/>圣人<wbr/>无为故无败 |  | The sage doesn't contrive, so she isn't beaten.
+| 无执故无失             |  | Not grasping, she doesn't lose.
+| 民之从事               |  | When people are carrying out their projects
+| 常于几成而败之         |  | They usually blow it at the end.
+| 慎终如始               |  | If you are as careful at the end
+|                        |  | As you were at the beginning,
+| 则无败事               |  | You won't be disappointed.
+| 是以<wbr/>圣人<wbr/>欲不欲 |  | Therefore the sage desires non-desire,
+| 不贵难得之货           |  | Does not value rare goods,
+| 学不学                 |  | Studies the unlearnable
+| 复众人之所过           |  | So that she can correct the mistakes of average people
+| 以辅万物之自然         |  | And aid all things in manifesting their true nature
+| 而不敢为               |  | Without presuming to take the initiative.
 
 {% include kipisi-nav.html num=64 %}
 
