--- a/lipu-nasin-pona/65.md
+++ b/lipu-nasin-pona/65.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 65 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 65 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,25 +10,23 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-古之善为道者、非以明民、將以愚之。民之难治、以其智多。故以智治国、国之贼。不以智治国、国之福。知此两者、亦稽式。常知稽式、是谓玄德。玄德深矣、远 矣、与物反矣。然后乃至大顺。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The ancients who were skillful at the Way
-|  |  | Did not illuminate the people
-|  |  | But rather kept them simple.
-|  |  | When the people are difficult to rule
-|  |  | It is because of their cleverness.
-|  |  | Therefore
-|  |  | If you use cleverness to rule the state
-|  |  | You are a robber of the state.
-|  |  | If you don't use cleverness to rule the state
-|  |  | You are a blessing to the state.
-|  |  | If you understand these two points, you know the proper norm for governing.
-|  |  | To be continuously understanding the proper norm is called Mysterious Virtue.
-|  |  | How deep and far-reaching Mysterious Virtue is!
-|  |  | It makes all return
-|  |  | Until they reach the Great Norm.
+| 古之善为道者 |  | The ancients who were skillful at the Way
+| 非以明民     |  | Did not illuminate the people
+| 将以愚之     |  | But rather kept them simple.
+| 民之难治     |  | When the people are difficult to rule
+| 以其智多     |  | It is because of their cleverness.
+| 故以         |  | Therefore
+| 智治国       |  | If you use cleverness to rule the state
+| 国之贼       |  | You are a robber of the state.
+| 不以智治国   |  | If you don't use cleverness to rule the state
+| 国之福       |  | You are a blessing to the state.
+| 知此两者<wbr/>亦稽式 |  | If you understand these two points, you know the proper norm for governing.
+| 常知稽式<wbr/>是谓玄德 | ... nimi li Pona Nasa. | To be continuously understanding the proper norm is called Mysterious Virtue.
+| 玄德深矣<wbr/>远矣 | Pona Nasa li suli mute a! | How deep and far-reaching Mysterious Virtue is!
+| 与物反矣           | ijo ale li sin kama. | It makes all return
+| 然后乃至大顺       |  | Until they reach the Great Norm.
 
 {% include kipisi-nav.html num=65 %}
 
