--- a/lipu-nasin-pona/66.md
+++ b/lipu-nasin-pona/66.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 66 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 66 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,24 +10,22 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-江海所以能为百谷王者、以其善下之。故能为百谷王。是以欲上民、必以言下之、欲先民、必以身后之。是以圣人、处上而民不重、处前而民不害。是以天下乐推而 不厌。以其不争故、天下莫能与之争。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The reason the river and sea can be regarded as
-|  |  | The rulers of all the valley streams
-|  |  | Is because of their being below them.
-|  |  | Therefore they can be their rulers.
-|  |  | So if you want to be over people
-|  |  | You must speak humbly to them.
-|  |  | If you want to lead them
-|  |  | You must place yourself behind them.
-|  |  | Thus the sage is positioned above
-|  |  | And the people do not feel oppressed.
-|  |  | He is in front and they feel nothing wrong.
-|  |  | Therefore they like to push him front and never resent him.
-|  |  | Since he does not contend
-|  |  | No one can contend with him.
+| 江海所以能                 |  | The reason the river and sea can be regarded as
+| 为百谷王者                 |  | The rulers of all the valley streams
+| 以其善下之                 |  | Is because of their being below them.
+| 故能<wbr/>为百谷王         |  | Therefore they can be their rulers.
+| 是以<wbr/>圣人<wbr/>欲上民 |  | So if you want to be over people
+| 必以言下之                 |  | You must speak humbly to them.
+| 欲先民                     |  | If you want to lead them
+| 必以身后之                 |  | You must place yourself behind them.
+| 是以<wbr/>圣人<wbr/>处上   |  | Thus the sage is positioned above
+| 而民不重                   |  | And the people do not feel oppressed.
+| 处前<wbr/>而民不害         |  | He is in front and they feel nothing wrong.
+| 是以<wbr/>天下<wbr/>乐推而不厌 |  | Therefore they like to push him front and never resent him.
+| 以其不争                   |  | Since he does not contend
+| 故天下<wbr/>莫能与之争     |  | No one can contend with him.
 
 {% include kipisi-nav.html num=66 %}
 
