--- a/lipu-nasin-pona/67.md
+++ b/lipu-nasin-pona/67.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 67 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 67 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,32 +10,30 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天下皆谓我道大似不肖。夫唯大、故似不肖。若肖、久矣、其细也夫。我有三宝、持而保之。一日慈、二日俭、三日不敢为天下先。慈、故能勇。俭、故能广。不敢 为天下先、故能成器长。今舍慈且勇、舍俭且广、舍后且先、死矣。夫慈以战则胜、以守则固 天將救之、以慈衞之。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The reason everybody calls my Way great
-|  |  | Is because there is nothing quite like it.
-|  |  | It is exactly because it isgreat
-|  |  | That there is nothing quite like it.
-|  |  | If there were something that were consistently like it
-|  |  | How could it be small?
-|  |  | I have three treasures thatI hold and cherish.
-|  |  | The first is compassion,
-|  |  | The second is frugality,
-|  |  | The third is not daring to put myself ahead of everybody.
-|  |  | Having compassion, I can be brave.
-|  |  | Having frugality, I can be generous.
-|  |  | Not daring to put myself ahead of everybody
-|  |  | I can take the time to perfect my abilities.
-|  |  | Now if I am brave without compassion
-|  |  | Generous without frugality, or
-|  |  | Go to the fore without putting my own concerns last,
-|  |  | I might as well be dead.
-|  |  | If you wage war with compassion you will win.
-|  |  | If you protect yourself with compassion you will be impervious.
-|  |  | Heaven will take care of you,
-|  |  | Protecting you with compassion.
+| 天下皆谓我道大   |  | The reason everybody calls my Way great
+| 似不肖           |  | Is because there is nothing quite like it.
+| 夫唯大           |  | It is exactly because it is great
+| 故似不肖         |  | That there is nothing quite like it.
+| 若肖久矣         |  | If there were something that were consistently like it
+| 其细也夫         |  | How could it be small?
+| 我有三宝<wbr/>持而保之 | mi jo, kin mi olin e ijo ni la: | I have three treasures that I hold and cherish.
+| 一曰慈           |  | The first is compassion,
+| 二曰俭           |  | The second is frugality,
+| 三曰不敢为天下先 |  | The third is not daring to put myself ahead of everybody.
+| 慈故能勇         |  | Having compassion, I can be brave.
+| 俭故能广         |  | Having frugality, I can be generous.
+| 不敢为天下先     |  | Not daring to put myself ahead of everybody
+| 故能成器长       |  | I can take the time to perfect my abilities.
+| 今舍慈且勇       |  | Now if I am brave without compassion
+| 舍俭且广         |  | Generous without frugality, or
+| 舍后且先         |  | Go to the fore without putting my own concerns last,
+| 死矣             |  | I might as well be dead.
+| 夫慈以战则胜     |  | If you wage war with compassion you will win.
+| 以守则固         |  | If you protect yourself with compassion you will be impervious.
+| 天将救之         |  | Heaven will take care of you,
+| 以慈卫之         |  | Protecting you with compassion.
 
 {% include kipisi-nav.html num=67 %}
 
