--- a/lipu-nasin-pona/68.md
+++ b/lipu-nasin-pona/68.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 68 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 68 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,17 +10,15 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-善为士者不武。善战者不怒。善胜敌者不与。善用人者为之下。是谓不争之德、是谓用人之力、是谓配天之极。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The best warrior is never aggressive.
-|  |  | The best fighter is never angry.
-|  |  | The best tactician does not engage the enemy.
-|  |  | The best utilizer of people's talents places himself below them.
-|  |  | This is called the virtue of non-contention.
-|  |  | It is called the ability to engage people's talents.
-|  |  | It is called the ultimate in merging with Heaven.
+| 善为士者<wbr/>不武   | _jan utala_ pona li utala ala.  | The best warrior is never aggressive.
+| 善战者<wbr/>不怒     | _jan utala_ pona li pilin ike ala. | The best fighter is never angry.
+| 善胜敌者<wbr/>不与   | _jan utala_ pona li pali ala e jan ante. | The best tactician does not engage the enemy.
+| 善用人者<wbr/>为之下 | jan pi kepeken pali jan li anpa e _ona wan_ tan _ona mute_. | The best utilizer of people's talents places himself below them.
+| 是谓<wbr/>不争之德   | nimi ni li pona Wile Ala. | This is called the virtue of non-contention.
+| 是谓<wbr/>用人之力   | nimi ni li wawa Pali Jan. | It is called the ability to engage people's talents.
+| 是谓<wbr/>配天古之极 | nimi ni li ______ Wan Sewi. | It is called the ultimate in merging with Heaven.
 
 {% include kipisi-nav.html num=68 %}
 
