--- a/lipu-nasin-pona/69.md
+++ b/lipu-nasin-pona/69.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 69 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 69 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-用兵有言、吾不敢为主而为客、不敢进寸而退尺。是谓行无行、攘无臂、 扔 无敌、执无兵。祸莫大於轻敌。轻敌几丧吾宝。故 抗兵相如、哀者胜矣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Strategists have a saying:
-|  |  | I prefer to be able to move, rather than be in a fixed position
-|  |  | I prefer to retreat a foot rather than advancing an inch.
-|  |  | This is called progress without advancing;
-|  |  | Preparing without showing off;
-|  |  | Smashing where there is no defense;
-|  |  | Taking him without a fight.
-|  |  | There is no greater danger than under-estimating your opponent.
-|  |  | If I under-estimate my opponent
-|  |  | I will lose that which is most dear.
-|  |  | Therefore
-|  |  | When opponents clash
-|  |  | The one who is sorry about it will be the winner.
+| 用兵有言             |  | Strategists have a saying:
+| 吾<wbr/>不敢为主<wbr/>而为客 |  | I prefer to be able to move, rather than be in a fixed position
+| 不敢进寸<wbr/>而退尺 |  | I prefer to retreat a foot rather than advancing an inch.
+| 是谓<wbr/>行无行     |  | This is called progress without advancing;
+| 攘无臂               |  | Preparing without showing off;
+| 扔无敌               |  | Smashing where there is no defense;
+| 执无兵               |  | Taking him without a fight.
+| 祸莫大<wbr/>于轻敌   |  | There is no greater danger than under-estimating your opponent.
+| 轻敌几               |  | If I under-estimate my opponent
+| 丧吾宝               |  | I will lose that which is most dear.
+| 故抗                 |  | Therefore
+| 兵相加               |  | When opponents clash
+| 哀者胜矣             |  | The one who is sorry about it will be the winner.
 
 {% include kipisi-nav.html num=69 %}
 
