--- a/lipu-nasin-pona/70.md
+++ b/lipu-nasin-pona/70.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 70 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 70 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,21 +10,20 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-吾言甚易知、甚易行。天下莫能知、莫能行。言有宗、事有君。夫唯无知、是以不我知。知我者希、则我者贵。是以圣人、被褐怀玉。
-
 {:.loseta}
 |:-:|-|-
-|  |  | My words are easy to understand
-|  |  | And easy to practice.
-|  |  | Yet nobody understands them or practices them.
-|  |  | My words have an origin;
-|  |  | My actions have a principle.
-|  |  | It is only because of your not understanding this
-|  |  | That you do not understand me.
-|  |  | Since there are few who understand me
-|  |  | I am valued.
-|  |  | Therefore the sage wears coarse clothes.
-|  |  | Yet hides a jewel in his bosom.
+| 吾言甚易知 |  | My words are easy to understand
+| 甚易行     |  | And easy to practice.
+| 天下莫能知 |  | Yet nobody understands them
+| 莫能行     |  | [O]r practices them.
+| 言有宗     |  | My words have an origin;
+| 事有君     |  | My actions have a principle.
+| 夫唯无知   |  | It is only because of your not understanding this
+| 是以不我知 |  | That you do not understand me.
+| 知我者希   |  | Since there are few who understand me
+| 则我者贵   |  | I am valued.
+| 是以<wbr/>圣人<wbr/>被褐 |  | Therefore the sage wears coarse clothes.
+| 怀玉       |  | Yet hides a jewel in his bosom.
 
 {% include kipisi-nav.html num=70 %}
 
