--- a/lipu-nasin-pona/71.md
+++ b/lipu-nasin-pona/71.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 71 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 71 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,18 +10,14 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-知不知上、不知知病。夫唯病病、是以不病。圣人不病、以其病病。是以不病
-
 {:.loseta}
 |:-:|-|-
 |  |  | There is nothing better than to know that you don't know.
-|  |  | Not knowing, yet thinking you know—
-|  |  | This is sickness.
-|  |  | Only when you are sick of being sick
-|  |  | Can you be cured.
-|  |  | The sage's not being sick
-|  |  | Is because she is sick of sickness.
-|  |  | Therefore she is not sick.
+| 知不知上<wbr/>不知知病 |  | Not knowing, yet thinking you know— This is sickness.
+| 夫唯病病<wbr/>是以不病     |  | Only when you are sick of being sick Can you be cured.
+| 圣人不病               |  | The sage's not being sick
+| 以其病病               |  | Is because she is sick of sickness.
+| 是以不病               |  | Therefore she is not sick.
 
 {% include kipisi-nav.html num=71 %}
 
