--- a/lipu-nasin-pona/72.md
+++ b/lipu-nasin-pona/72.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 72 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 72 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,21 +10,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-民不畏威、则大威至。无狎其所居、无厌其所生。夫唯不厌、是以不厌。是以圣人、自知不自见、自爱不自贵。故去彼取此。
-
 {:.loseta}
 |:-:|-|-
-|  |  | When the people do not fear your might
-|  |  | Then your might has truly become great.
-|  |  | Don't interfere with their household affairs.
-|  |  | Don't oppress their livelihood.
-|  |  | If you don't oppress them they won't feel oppressed.
-|  |  | Thus the sage understands herself
-|  |  | But does not show herself.
-|  |  | Loves herself
-|  |  | But does not prize herself.
-|  |  | Therefore she lets go of that
-|  |  | And takes this.
+| 民不畏威 |  | When the people do not fear your might
+| 则大威至 |  | Then your might has truly become great.
+| 无狎其所居 |  | Don't interfere with their household affairs.
+| 无厌其所生 |  | Don't oppress their livelihood.
+| 夫唯不厌<wbr/>是以<wbr/>不厌 |  | If you don't oppress them they won't feel oppressed.
+| 是以圣人<wbr/>自知 |  | Thus the sage understands herself
+| 不自见 |  | But does not show herself.
+| 自爱 |  | Loves herself
+| 不自贵 |  | But does not prize herself.
+| 故去彼 |  | Therefore she lets go of that
+| 取此 |  | And takes this.
 
 {% include kipisi-nav.html num=72 %}
 
