--- a/lipu-nasin-pona/73.md
+++ b/lipu-nasin-pona/73.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 73 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 73 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,22 +10,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-勇於敢则杀、勇於不敢则活。此两者或利、或害。天之所恶、孰知其故。是以圣人犹难之。天之道不争而善胜、不言而善应、不召而自来、 繟 然而善谋。天网恢恢、疏而不失。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If you are courageous in daring you will die.
-|  |  | If you are courageous in not-daring you will live.
-|  |  | Among these two, one is beneficial and the other is harmful.
-|  |  | Who understands the reason why Heaven dislikes what it dislikes?
-|  |  | Even the sage has difficulty in knowing this.
-|  |  | The Way of Heaven is to win easily without struggle.
-|  |  | To respond well without words,
-|  |  | To naturally come without special invitation,
-|  |  | To plan well without anxiety.
-|  |  | Heaven's net is vast.
-|  |  | It is loose.
-|  |  | Yet nothing slips through.
+| 勇于敢则杀             |  | If you are courageous in daring you will die.
+| 勇于不敢则活           |  | If you are courageous in not-daring you will live.
+| 此两者<wbr/>或利或害   |  | Among these two, one is beneficial and the other is harmful.
+| 天之所恶<wbr/>孰知其故 |  | Who understands the reason why Heaven dislikes what it dislikes?
+| 是以圣人<wbr/>犹难之   |  | Even the sage has difficulty in knowing this.
+| 天之道<wbr/>不争而善胜 |  | The Way of Heaven is to win easily without struggle.
+| 不言而善应             |  | To respond well without words,
+| 不召而自来             |  | To naturally come without special invitation,
+| 繟然而善谋             |  | To plan well without anxiety.
+| 天网恢恢               |  | Heaven's net is vast.
+| 疏而不失               |  | It is loose. Yet nothing slips through.
 
 {% include kipisi-nav.html num=73 %}
 
