--- a/lipu-nasin-pona/74.md
+++ b/lipu-nasin-pona/74.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 74 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 74 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,20 +10,18 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-民不畏死、奈何以死惧之。若使民常畏死、而为奇者、吾得执而杀之、执敢。常有司杀者杀。夫代司杀者杀、是谓代大匠 斵 。夫代大匠断者、希有不伤其手矣。
-
 {:.loseta}
 |:-:|-|-
-|  |  | If the people don't fear death
-|  |  | How will you scare them with death?
-|  |  | If you make the people continuously fear death
-|  |  | By seizing anybody who does something out of the ordinary
-|  |  | And killing them,
-|  |  | Who will dare to move?
-|  |  | There is always an official executioner to handle this.
-|  |  | If you play the role of the official executioner
-|  |  | It is like cutting wood in the capacity of Master Carpenter.
-|  |  | There are few who will not cut their hands.
+| 民不畏死     |  | If the people don't fear death
+| 奈何以死惧之 |  | How will you scare them with death?
+| 若使民常畏死 |  | If you make the people continuously fear death
+| 而为奇者     |  | By seizing anybody who does something out of the ordinary
+| 吾得执而杀之 |  | And killing them,
+| 孰敢         |  | Who will dare to move?
+| 常有司杀者杀 |  | There is always an official executioner to handle this.
+| 夫司杀者     |  | If you play the role of the official executioner
+| 是大匠斫<wbr/>夫代大匠斫者 |  | It is like cutting wood in the capacity of Master Carpenter.
+| 希有不伤其手矣 |  | There are few who will not cut their hands.
 
 {% include kipisi-nav.html num=74 %}
 
