--- a/lipu-nasin-pona/76.md
+++ b/lipu-nasin-pona/76.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 76 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 76 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,20 +10,18 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-人之生也柔弱、其死也坚强。草木之生也柔脆、其死也枯稿。故坚强者死之徒、柔弱者生之徒。是以兵强则灭、木强则折。强大处下、柔弱处上。
-
 {:.loseta}
 |:-:|-|-
-|  |  | When people are born they are gentle and soft.
-|  |  | At death they are hard and stiff.
-|  |  | When plants are alive they are soft and delicate.
-|  |  | When they die, they wither and dry up.
-|  |  | Therefore the hard and stiff are followers of death.
-|  |  | The gentle and soft are the followers of life.
-|  |  | Thus, if you are aggressive and stiff, you won't win.
-|  |  | When a tree is hard enough, it is cut. Therefore
-|  |  | The hard and big are lesser,
-|  |  | The gentle and soft are greater.
+| 人之生也柔弱       | jan li kama lon la, sijelo ona li kon li suwi.                | When people are born they are gentle and soft.
+| 其死也坚强         | jan li kama moli la, sijelo ona li kiwen li _palisa_.         | At death they are hard and stiff.
+| 万物草木之生也柔脆 | kasi li kama suli la, ona li kon li _suwi_.                   | When plants are alive they are soft and delicate.
+| 其死也枯槁         | kasi li kama moli la, ona li kama lili li kama jo ala e telo. | When they die, they wither and dry up.
+| 故坚强者死之徒     |                                                               | Therefore the hard and stiff are followers of death.
+| 柔弱者生之徒       |                                                               | The gentle and soft are the followers of life.
+| 是以兵强则不胜     |                                                               | Thus, if you are aggressive and stiff, you won't win.
+| 木强则共           |                                                               | When a tree is hard enough, it is cut. Therefore
+| 强大处下           | ona kiwen e ona suli li anpa.                                 | The hard and big are lesser,
+| 柔弱处上           | ona kon e ona suwi li wawa.                                   | The gentle and soft are greater.
 
 {% include kipisi-nav.html num=76 %}
 
