--- a/lipu-nasin-pona/77.md
+++ b/lipu-nasin-pona/77.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 77 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 77 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,27 +10,25 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天之道其犹张弓与。高者抑之、下者擧之。有余者损之 不足者补之。天之道损有余而补不足。人之道则不然、损不足以奉有余。孰能有余以奉天下。唯有道者。是以圣人、为而不侍、功成而不处、其不欲见贤。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The Way of Heaven
-|  |  | Is like stretching a bow.
-|  |  | The top is pulled down,
-|  |  | The bottom is pulled up.
-|  |  | Excess string is removed
-|  |  | Where more is needed, it is added.
-|  |  | It is the Way of Heaven
-|  |  | To remove where there is excess
-|  |  | And add where there is lack.
-|  |  | The way of people is different:
-|  |  | They take away where there is need
-|  |  | And add where there is surplus.
-|  |  | Who can take his surplus and give it to the people?
-|  |  | Only one who possesses the Way.
-|  |  | Therefore the sage acts without expectation.
-|  |  | Does not abide in his accomplishments.
-|  |  | Does not want to show his virtue.
+| 天之道                 |  | The Way of Heaven
+| 其犹张弓与             |  | Is like stretching a bow.
+| 高者抑之               |  | The top is pulled down,
+| 下者举之               |  | The bottom is pulled up.
+| 有余者损之             |  | Excess string is removed
+| 不足者补之             |  | Where more is needed, it is added.
+| 天之道                 |  | It is the Way of Heaven
+| 损有余                 |  | To remove where there is excess
+| 而补不足               |  | And add where there is lack.
+| 人之道则不然           |  | The way of people is different:
+| 损不足                 |  | They take away where there is need
+| 以奉有余               |  | And add where there is surplus.
+| 孰能有余<wbr/>以奉天下 |  | Who can take his surplus and give it to the people?
+| 唯有道者               |  | Only one who possesses the Way.
+| 是以圣人<wbr/>为而不侍 |  | Therefore the sage acts without expectation.
+| 功成而不处             |  | Does not abide in his accomplishments.
+| 其不欲见贤             |  | Does not want to show his virtue.
 
 {% include kipisi-nav.html num=77 %}
 
