--- a/lipu-nasin-pona/78.md
+++ b/lipu-nasin-pona/78.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 78 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 78 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-天下莫柔弱於水。而攻坚强者莫之能胜 以其无以易之。弱之胜强、柔之胜刚、天下莫不知、莫能行。是以圣人云、受国之垢、是谓社稷主、受国不祥、是为天下王。正言若反。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Nothing in the world is softer than water,
-|  |  | Yet nothing is better at overcoming the hard and strong.
-|  |  | This is because nothing can alter it.
-|  |  | That the soft overcomes the hard
-|  |  | And the gentle overcomes the aggressive
-|  |  | Is something that everybody knows
-|  |  | But none can do themselves.
-|  |  | Therefore the sages say:
-|  |  | The one who accepts the dirt of the state
-|  |  | Becomes its master.
-|  |  | The one who accepts its calamity
-|  |  | Becomes king of the world.
-|  |  | Truth seems contradictory.
+| 天下莫柔弱于水     |  | Nothing in the world is softer than water,
+| 而攻坚强者莫之能胜 |  | Yet nothing is better at overcoming the hard and strong.
+| 其无以易之         |  | This is because nothing can alter it.
+| 弱之胜强           |  | That the soft overcomes the hard
+| 柔之胜刚           |  | And the gentle overcomes the aggressive
+| 天下莫不知         |  | Is something that everybody knows
+| 莫能行             |  | But none can do themselves.
+| 是以圣人云         |  | Therefore the sages say:
+| 受国之垢           |  | The one who accepts the dirt of the state
+| 是谓社稷主         |  | Becomes its master.
+| 受国不祥           |  | The one who accepts its calamity
+| 是谓天下王         |  | Becomes king of the world.
+| 正言若反           |  | Truth seems contradictory.
 
 {% include kipisi-nav.html num=78 %}
 
