--- a/lipu-nasin-pona/79.md
+++ b/lipu-nasin-pona/79.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 79 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 79 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-和大怨必有余怨。安可以为善。是以圣人执左契而不责於人。有德司契、无德司彻。天道无亲、常与善人。
-
 {:.loseta}
 |:-:|-|-
-|  |  | After settling down for great anger
-|  |  | There are always resentments left over.
-|  |  | How can this be considered as good?
-|  |  | Therefore the sage keeps her part of the deal, [^8]
-|  |  | And doesn't badger the other party.
-|  |  | The virtuous ascertain the content of the contract itself;
-|  |  | Those without virtue are concerned about it's being exacted. [^9]
-|  |  | The Heavenly Way has no favorites:
-|  |  | It always raises up the Good. [^10]
+| 和大怨               |  | After settling down for great anger
+| 必有馀怨             |  | There are always resentments left over.
+| 安可以为善           |  | How can this be considered as good?
+| 是以圣人<wbr/>执左契 |  | Therefore the sage keeps her part of the deal[^8],
+| 而不责于人           |  | And doesn't badger the other party.
+| 有德司契             |  | The virtuous ascertain the content of the contract itself; [^9]
+| 无德司彻             |  | Those without virtue are concerned about it's being exacted. [^9]
+| 天道无亲             |  | The Heavenly Way has no favorites:
+| 常与善人             |  | It always raises up the Good[^10].
 
-[^8]: 左契 literally means the “left side of the tally.” Ancient contracts in East Asia were made by writing the agreement on a wooden board that would be broken in half, and rematched when the contract had been fulfilled.
-[^9]: The interpretation of 司契 and 司徹 here varies considerably among translators. We take it as one of the plethora of expressions of the pervasive notion of wu-wei in the Daodejing, which implies doing things by focusing on the content, and what one can actual do well, rather than on expectations of a rapid conclusion. Cf. the translations by D.C. Lau, Richard Llynn, Ellen Chen, John Wu, and others.
-[^10]: Cf. Analects 4:10: The Master said: “When the noble man deals with the world he is not prejudiced for or against anything. He does what is Right.” 子曰。君子之於天下也、無適也、無莫也、義之與比。
+[^8]: Muller: "左契 literally means the “left side of the tally.” Ancient contracts in East Asia were made by writing the agreement on a wooden board that would be broken in half, and rematched when the contract had been fulfilled."
+[^9]: Muller: "The interpretation of 司契 and 司徹 here varies considerably among translators. We take it as one of the plethora of expressions of the pervasive notion of wu-wei in the Daodejing, which implies doing things by focusing on the content, and what one can actual do well, rather than on expectations of a rapid conclusion. Cf. the translations by D.C. Lau, Richard Llynn, Ellen Chen, John Wu, and others."
+[^10]: Muller: "Cf. Analects 4:10: The Master said: “When the noble man deals with the world he is not prejudiced for or against anything. He does what is Right.” 子曰。君子之於天下也、無適也、無莫也、義之與比。"
 
 {% include kipisi-nav.html num=79 %}
 
