--- a/lipu-nasin-pona/80.md
+++ b/lipu-nasin-pona/80.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 80 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 80 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,19 +10,17 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-小国寡民、使有什伯之器而不用。使民重死而不远徒。虽有舟舆、无所乘之、虽有甲兵、无所陈之。使人復结绳而用之、甘其食、美其服、安其居、乐其俗、邻国相 望、鷄犬之声相闻、民至老死不相往来。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Let there be a small country with few people,
-|  |  | Who, even having much machinery, don't use it.
-|  |  | Who take death seriously and don't wander far away.
-|  |  | Even though they have boats and carriages, they never ride in them.
-|  |  | Having armor and weapons, they never go to war.
-|  |  | Let them return to measurement by tying knots in rope.
-|  |  | Sweeten their food, give them nice clothes, a peaceful abode and a relaxed life.
-|  |  | Even though the next country can be seen and its dogs and chickens can be heard,
-|  |  | The people will grow old and die without visiting each other's land.
+| 小国寡民<wbr/>           |  | Let there be a small country with few people,
+| 使有什伯之器<wbr/>而不用 |  | Who, even having much machinery, don't use it.
+| 使民重死<wbr/>而不远徙   |  | Who take death seriously and don't wander far away.
+| 虽有舟舆<wbr/>无所乘之   |  | Even though they have boats and carriages, they never ride in them.
+| 虽有甲兵<wbr/>无所陈之   |  | Having armor and weapons, they never go to war.
+| 使民复结绳而用之         |  | Let them return to measurement by tying knots in rope.
+| 甘其食<wbr/>美其服<wbr/>安其居<wbr/>乐其俗 |  | Sweeten their food, give them nice clothes, a peaceful abode and a relaxed life.
+| 邻国相望<wbr/>鸡犬之声相闻 |  | Even though the next country can be seen and its dogs and chickens can be heard,
+| 民至老死<wbr/>不相往来     |  | The people will grow old and die without visiting each other's land.
 
 {% include kipisi-nav.html num=80 %}
 
