--- a/lipu-nasin-pona/39.md
+++ b/lipu-nasin-pona/39.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 39 • lipu pi nasin sewi
+title: lipu pona la, kipisi nanpa 39 • lipu pi nasin sewi
 sidebar:
   - title: "kipisi ante"
     text: |
