--- a/lipu-nasin-pona/48.md
+++ b/lipu-nasin-pona/48.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 48 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 48 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
