--- a/lipu-nasin-pona/57.md
+++ b/lipu-nasin-pona/57.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 57 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 57 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,29 +10,26 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-以正治国、以奇用兵、以无事取天下。吾何以知其然哉。以此。天下多忌讳、而民弥贫。民多利器、国家滋昏。人多伎巧、奇物滋起。法令滋彰、盗贼多有。故圣人 云、我无为而民自化。我好静而民自正。我无事而民自富。我无欲而民自朴。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Use fairness in governing the state.
-|  |  | Use surprise tactics in war.
-|  |  | Be unconcerned and you will have the world.
-|  |  | How do I know it is like this?
-|  |  | Because:
-|  |  | The more regulations there are,
-|  |  | The poorer people become.
-|  |  | The more people own lethal weapons,
-|  |  | The more darkened are the country and clans.
-|  |  | The more clever the people are,
-|  |  | The more extraordinary actions they take.
-|  |  | The more picky the laws are,
-|  |  | The more thieves and gangsters there are.
-|  |  | Therefore the sages say:
-|  |  | I do not force my way and the people transform themselves.
-|  |  | I enjoy my serenity and the people correct themselves.
-|  |  | I do not interfere and the people enrich themselves.
-|  |  | I have no desires
-|  |  | And the people find their original mind.
+| 以正治国             |  | Use fairness in governing the state.
+| 以奇用兵             |  | Use surprise tactics in war.
+| 以无事取天下         |  | Be unconcerned and you will have the world.
+| 吾何以<wbr/>知其然哉 |  | How do I know it is like this?
+| 以此                 |  | Because:
+| 天下多忌讳           |  | The more regulations there are,
+| 而民弥贫             |  | The poorer people become.
+| 民多利器             |  | The more people own lethal weapons,
+| 国家滋昏             |  | The more darkened are the country and clans.
+| 人多伎巧             |  | The more clever the people are,
+| 奇物滋起             |  | The more extraordinary actions they take.
+| 法令滋彰             |  | The more picky the laws are,
+| 盗贼多有             |  | The more thieves and gangsters there are.
+| 故圣人云             |  | Therefore the sages say:
+| 我无为<wbr/>而民自化 |  | I do not force my way and the people transform themselves.
+| 我好静<wbr/>而民自正 |  | I enjoy my serenity and the people correct themselves.
+| 我无事<wbr/>而民自富 |  | I do not interfere and the people enrich themselves.
+| 我无欲<wbr/>而民自朴 |  | I have no desires<br/> And the people find their original mind.
 
 {% include kipisi-nav.html num=57 %}
 
