--- a/lipu-nasin-pona/59.md
+++ b/lipu-nasin-pona/59.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 59 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 59 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-治人事天、莫若嗇。夫唯嗇、是谓早服。早服谓之重积德。重积德、则无不克。无不克、则莫知其极。莫知其极、可以有国。有国之母、可以长久。是谓深根、固柢、长生、久视之道。
-
 {:.loseta}
 |:-:|-|-
-|  |  | In governing the country and serving Heaven
-|  |  | There is nothing like frugality.
-|  |  | Only by being frugal can you recover quickly.
-|  |  | When you recover quickly you accumulate virtue.
-|  |  | Having accumulated virtue,
-|  |  | There is nothing you can't overcome.
-|  |  | When there is nothing you can't overcome
-|  |  | Who knows the limits of your capabilities?
-|  |  | These limits being unfathomable
-|  |  | You can possess the country.
-|  |  | The Mother who possesses the country can be long-living.
-|  |  | This is called “planting the roots deeply and firmly.”
-|  |  | The way to long life and eternal vision.
+| 治人事天             |  | In governing the country and serving Heaven
+| 莫若啬               |  | There is nothing like frugality.
+| 夫唯啬<wbr/>是谓早服 |  | Only by being frugal can you recover quickly.
+| 早服谓之<wbr/>重积德 |  | When you recover quickly you accumulate virtue.
+| 重积德则             |  | Having accumulated virtue,
+| 无不克               |  | There is nothing you can't overcome.
+| 无不克则             |  | When there is nothing you can't overcome
+| 莫知其极             |  | Who knows the limits of your capabilities?
+| 莫知其极             |  | These limits being unfathomable
+| 可以有国             |  | You can possess the country.
+| 有国之母<wbr/>可以长久 |  | The Mother who possesses the country can be long-living.
+| 是谓深根固柢         |  | This is called “planting the roots deeply and firmly.”
+| 长生久视之道         |  | The way to long life and eternal vision.
 
 {% include kipisi-nav.html num=59 %}
 
