--- a/lipu-nasin-pona/60.md
+++ b/lipu-nasin-pona/60.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 60 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 60 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,24 +10,22 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-治大国、若烹小鲜。以道莅天下、其鬼不神 非其鬼不神、其神不伤人。非其神不伤人、圣人亦不伤人。夫两不相伤。故德交归焉。
-
 {:.loseta}
 |:-:|-|-
-|  |  | Governing a large country is like cooking a small fish. [^4]
-|  |  | When you govern people with the Way
-|  |  | Unhappy ghosts [^5] will have no power. [^6]
-|  |  | Not that they don't have power,
-|  |  | But their power will not harm people.
-|  |  | Not only does their power not harm people:
-|  |  | The sage also doesn't harm people,
-|  |  | Since the two do not harm each other.
-|  |  | Their virtue converges. [^7]
+| 治大国若烹小鲜 |  | Governing a large country is like cooking a small fish. [^4]
+| 以道莅天下     |  | When you govern people with the Way
+| 其鬼不神       |  | Unhappy ghosts[^5] will have no power[^6].
+| 非其鬼不神     |  | Not that they don't have power,
+| 其神不伤人     |  | But their power will not harm people.
+| 非其神不伤人   |  | Not only does their power not harm people:
+| 圣人亦不伤人   |  | The sage also doesn't harm people,
+| 夫两不相伤     |  | Since the two do not harm each other.
+| 故德交归焉     |  | Their virtue converges. [^7]
 
-[^4]: A small fish can be cooked without a great deal of preparation, cleaning, spicing, etc. Ruling with the Dao means ruling without interfering.
-[^5]: Spirits of people who died early, in some unfortunate way, or without descendants, who mingle in the world and plague people.
-[^6]: Translated elsewhere as “numinousity,” “spiritual power,” etc.
-[^7]: The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here.
+[^4]: [Muller:] "A small fish can be cooked without a great deal of preparation, cleaning, spicing, etc. Ruling with the Dao means ruling without interfering."
+[^5]: [Muller:] "Spirits of people who died early, in some unfortunate way, or without descendants, who mingle in the world and plague people."
+[^6]: [Muller:] "Translated elsewhere as “numinousity,” “spiritual power,” etc."
+[^7]: [Muller:] "The interpretation of this final line varies widely among translators; we decided to try to remain terse and close to the literal meaning here."
 
 {% include kipisi-nav.html num=60 %}
 
