--- a/lipu-nasin-pona/61.md
+++ b/lipu-nasin-pona/61.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 61 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 61 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,27 +10,25 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-大国者下流。天下之交。天下之牝。牝常以静胜牡。以静为下。故大国以下小国、则取小国。小国以下大国、则取大国。故或下以取、或下而取。大国不过欲兼畜 人、小国不过欲入事人。夫两者各得其所欲。大者宜为下。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The great state should be like a river basin.
-|  |  | The mixing place of the world,
-|  |  | The feminine of the world.
-|  |  | The feminine always overcomes the masculine by softness
-|  |  | Because softness is lesser.
-|  |  | Therefore if a large state serves a small state
-|  |  | It will gain the small state.
-|  |  | If a small state serves a large state
-|  |  | It will gain the large state.
-|  |  | Therefore some serve in order to gain
-|  |  | And some gain despite their servitude.
-|  |  | The large state wants nothing more
-|  |  | Than to unite and feed its people.
-|  |  | The small state wants nothing more
-|  |  | Than to enter into the service of the right person.
-|  |  | Thus both get what they want.
-|  |  | Greatness lies in placing oneself below.
+| 大国者下流             |  | The great state should be like a river basin.
+| 天下之交               |  | The mixing place of the world,
+| 天下之牝               |  | The feminine of the world.
+| 牝常以静胜牡           |  | The feminine always overcomes the masculine by softness
+| 以静为下               |  | Because softness is lesser.
+| 故大国以下小国         |  | Therefore if a large state serves a small state
+| 则取小国               |  | It will gain the small state.
+| 小国以下大国           |  | If a small state serves a large state
+| 则取大国               |  | It will gain the large state.
+| 故或下以取             |  | Therefore some serve in order to gain
+| 或下而取               |  | And some gain despite their servitude.
+| 大国不过               |  | The large state wants nothing more
+| 欲兼畜人               |  | Than to unite and feed its people.
+| 小国不过               |  | The small state wants nothing more
+| 欲入事人               |  | Than to enter into the service of the right person.
+| 夫两者<wbr/>各得其所欲 |  | Thus both get what they want.
+| 大者宜为下             |  | Greatness lies in placing oneself below.
 
 {% include kipisi-nav.html num=61 %}
 
