--- a/lipu-nasin-pona/62.md
+++ b/lipu-nasin-pona/62.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 62 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 62 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,23 +10,21 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-道者万物之奥。善人之宝、不善人之所保。美言可以市、尊行可以加人。人之不善、何弃之有。故立天子、置三公、虽有拱壁以先则駟马、不如坐进此道。古之所以 贵此道者何。不曰以求得、有罪以免邪。故为天下贵。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The Way is hidden deeply in all things.
-|  |  | It is the treasure of the good
-|  |  | And the refuge of the not-so-good.
-|  |  | With skillful words you can be successful.
-|  |  | With honorable actions you can be included.
-|  |  | People may not be so good, but how can you deny them?
-|  |  | Therefore, even though there are great jewels brought in by teams of horses at the coronation of the emperor and the installation of the three princes,
-|  |  | This is not as good as staying where you are
-|  |  | And advancing in this Way.
-|  |  | Why did the ancients so value the Way?
-|  |  | You can't say that it was for seeking gain
-|  |  | Or to have punishments to deter crime.
-|  |  | Therefore it is the most prized in the world.
+| 道者万物之奥           |  | The Way is hidden deeply in all things.
+| 善人之宝               |  | It is the treasure of the good
+| 不善人之所保           |  | And the refuge of the not-so-good.
+| 美言可以市             |  | With skillful words you can be successful.
+| 尊行可以加人           |  | With honorable actions you can be included.
+| 人之不善<wbr/>何弃之有 |  | People may not be so good, but how can you deny them?
+| 故立天子<wbr/>置三公<wbr/>虽有拱璧以先驷马 |  | Therefore, even though there are great jewels brought in by teams of horses at the coronation of the emperor and the installation of the three princes,
+| 不如坐                 |  | This is not as good as staying where you are
+| 进此道                 |  | And advancing in this Way.
+| 古之所以贵此道者何     |  | Why did the ancients so value the Way?
+| 不曰<wbr/>以求得       |  | You can't say that it was for seeking gain
+| 有罪以免耶             |  | Or to have punishments to deter crime.
+| 故为天下贵             |  | Therefore it is the most prized in the world.
 
 {% include kipisi-nav.html num=62 %}
 
