--- a/lipu-nasin-pona/75.md
+++ b/lipu-nasin-pona/75.md
@@ -1,6 +1,6 @@
 ---
 layout: lipu-nasin-pona
-title: lipu nasin la, kipisi nanpa 75 • lipu Nasin Pona
+title: lipu pona la, kipisi nanpa 75 • lipu Nasin Pona
 sidebar:
   - title: "kipisi ante"
     text: |
@@ -10,19 +10,19 @@ sidebar:
       {:.kipisi-nav-sidebar}
 ---
 
-民之饥、以其上食税之多。是以饥。民之难治、以其上之有为。是以难治。民之轻死、以其上求生之厚。是以轻死。夫唯无以生为者、是贤於贵生。
-
 {:.loseta}
 |:-:|-|-
-|  |  | The reason people starve
-|  |  | Is because their rulers tax them excessively.
-|  |  | They are difficult to govern
-|  |  | Because their rulers have their own ends in mind.
-|  |  | The reason people take death lightly
-|  |  | Is because they want life to be rich.
-|  |  | Therefore they take death lightly.
-|  |  | It is only by not living for your own ends
-|  |  | That you can go beyond valuing life.
+| 民之饥               |  | The reason people starve
+| 以其<wbr/>上食税之多 |  | Is because their rulers tax them excessively.
+| 是以饥               |  | [Therefore they starve.]
+| 民之难治             |  | They are difficult to govern
+| 以其<wbr/>上之有为   |  | Because their rulers have their own [selfish] ends in mind.
+| 是以难治             |  | [Therefore they are difficult to govern.]
+| 民之轻死             |  | The reason people take death lightly
+| 以其<wbr/>求生之厚   |  | Is because they want life to be rich.
+| 是以轻死             |  | Therefore they take death lightly.
+| 夫唯无以生为者       |  | It is only by not living for your own ends
+| 是贤于贵生           |  | That you can go beyond valuing life.
 
 {% include kipisi-nav.html num=75 %}
 
